--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchRestaurantActivity"></activity>
-        <activity android:name=".HungryActivity" />
+        <activity android:name=".SearchGalleryActivity"></activity>
+        <activity android:name=".LocationActivity" />
         <activity android:name=".ColorfulActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
