--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchGalleryActivity"></activity>
+        <activity android:name=".GalleryDetailActivity"></activity>
+        <activity android:name=".SearchGalleryActivity" />
         <activity android:name=".LocationActivity" />
         <activity android:name=".ColorfulActivity">
             <meta-data
